Fix flex clipping

--- a/src/components/Window/WindowTabs/BgRemover/BgRemover.module.css
+++ b/src/components/Window/WindowTabs/BgRemover/BgRemover.module.css
@@ -66,7 +66,6 @@
   box-sizing: border-box;
   display: flex;
   width: auto;
-  height: 100%;
   max-width: 100%;
   max-height: 100%;
   flex-direction: column;
@@ -74,7 +73,6 @@
   align-items: center;
   justify-content: center;
   margin: auto;
-  margin-top: 12px;
 }
 
 @media (min-width: 991px) {
