--- a/src/components/Window/WindowTabs/VoteCreate/Creator/Creator.module.css
+++ b/src/components/Window/WindowTabs/VoteCreate/Creator/Creator.module.css
@@ -1,10 +1,15 @@
 .creatorContainer {
     display: flex;
-    margin: 0 auto;
     min-width: 240px;
     height: 100%;
     justify-content: center;
     flex-direction: column;
+}
+
+@media (min-width: 340px) {
+    .creatorContainer {
+    margin: 0 auto;
+    }
 }
 
 .toolbarTop {
